[package]
name = "rust-map"
version = "0.1.0"
edition = "2024"

[dependencies]
kamadak-exif = "0.6.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
colored = "2.0"
